<resources>
    <string-array name="specializations_array">
        <item>Engine Repair</item>
        <item>Brake Services</item>
        <item>Electrical Systems</item>
        <item>Transmission Repair</item>
        <item>Oil Change</item>
        <item>General Maintenance</item>
        <item>Suspension and Steering</item>
        <item>AC  and Heating Repair</item>
        <item>Body</item>
    </string-array>
    <string name="title_activity_driverDashboard">driverDashboard</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="default_web_client_id">YOUR_CLIENT_ID_HERE.apps.googleusercontent.com</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_text">Login Here</string>
    <string name="google_maps_key" translatable="false"> AIzaSyBXoAeOmc6WNj_fzASLc2KvKlkO4hnUsZM</string>
    <string name="default_notification_channel_id" translatable="false">nearest_mechanic_notifications</string>
    <string name="service_requests">Service Requests</string>
    <string name="nearby_only">Nearby Only</string>
    <string name="engine_check">Engine Check</string>
    <string name="tyre_repair">Tyre Repair</string>
    <string name="settings">Settings</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="driver">Driver</string>
    <string name="mechanic">Mechanic</string>
    <string name="password">Password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="email">Email</string>
    <string name="select_role">Select Role</string>
    <string name="register">Register</string>
    <string name="create_a_password">Create a password</string>
    <string name="battery_jump">Battery Jump</string>
    <string name="mechanic_profile_picture">Mechanic Profile Picture</string>
    <string name="_2_4_km_away">2.4 km away</string>
    <string name="engine_specialist">Engine Specialist</string>
    <string name="john_doe">John Doe</string>
    <string name="call_mechanic">Call Mechanic</string>
    <string name="register_user">Register</string>
    <string name="stranded_find_help">Stranded?Find help</string>
    <string name="mechanic_finder">Mechanic Finder</string>
    <string name="notify_me_when_mechanics_are_nearby">Notify me when mechanics are nearby</string>
    <string name="receive_promotional_offers">Receive promotional offers</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="service_request_updates">Service Request Updates</string>
    <string name="notification_history">Notification History</string>
    <string name="nearest_mechanic_locator">Nearest Mechanic Locator</string>
    <string name="get_started">Get Started</string>
    <string name="app_logo">App Logo</string>
    <string name="notification_preferences_language_etc_can_be_configured_here">Notification preferences, language, etc. can be configured here.</string>
    <string name="setting_preferences">Settings</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="call_the_mechanic">Call Mechanic</string>
    <string name="cancel">Cancel</string>
    <string name="message_mechanic">Message Mechanic</string>
    <string name="message">Message</string>
    <string name="call">Call</string>
    <string name="mechanic_name">Mechanic Name</string>
    <string name="location">Location</string>
    <string name="specialization">Specialization</string>
    <string name="mechanic_profile_image">mechanic Photo
</string>
    <string name="phone">Phone</string>
    <string name="specialization_area">Specialization</string>
    <string name="name__of_mechanic">Name</string>
    <string name="contact_mechanic">Contact Mechanic</string>
    <string name="photo">photo</string>
    <string name="_name">Name</string>
    <string name="_specialization">Specialization</string>
    <string name="_location">Location</string>
    <string name="fuel">Fuel</string>
    <string name="_welcome">Welcome</string>
    <string name="speed">Speed</string>
    <string name="find_mechanics">Find Mechanics</string>
    <string name="no_results">no results</string>
    <string name="see_all">See All</string>
    <string name="reject_request">Reject Request</string>
    <string name="notifications">Notifications</string>
    <string name="driver_settings">Driver Settings</string>
    <string name="_call">Call</string>
    <string name="name_mechanic">Mechanic Name</string>
    <string name="specialization_">Specialization</string>
    <string name="rating">Rating</string>
    <string name="_settings">Settings</string>
    <string name="cancel_">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_your_service_request">Confirm your service request</string>
    <string name="_cancel">Cancel</string>
    <string name="enter_your_specialization">Enter your specialization</string>
    <string name="update">Update</string>
    <string name="fill_your_name">Enter your name</string>
    <string name="credentials">Credentials</string>
    <string name="Name">Name:</string>
    <string name="Settings">Settings</string>
    <string name="change_display_name">Change Display Name</string>
    <string name="change_passkey">Change Password</string>
    <string name="Email">Email</string>
    <string name="login">Login</string>
    <string name="Password">Password</string>
    <string name="Driver">Driver</string>
    <string name="mechanic_">Mechanic</string>
    <string name="email_address">Email</string>
    <string name="password_">Password</string>
    <string name="Register">Register</string>
    <string name="verification_status">Verification Status</string>
    <string name="email_">Email:</string>
    <string name="change_profile_photo">Change Profile Photo</string>
    <string name="resend_verification_email">Resend Verification Email</string>
    <string name="verification_status_">Verification_status</string>
    <string name="logout_">Logout</string>
    <string name="verification_">Verification Status</string>
    <string name="verification_statuses">Verification Status</string>
    <string name="history">History</string>
    <string name="requests">Requests</string>
    <string name="accept_request">Accept Request</string>
    <string name="update_credentials">Update Credentials</string>
    <string name="incoming_requests">Incoming requests</string>
    <string name="specialization_areas">Specialization</string>
    <string name="Name_">Enter your name</string>
    <string name="Credentials">Credentials</string>
    <string name="track_mechanics_in_real_time">Track Mechanics in Real-Time</string>
    <string name="watch_your_selected_mechanic_move_toward_your_location_no_guesswork_no_delays">Watch your selected mechanic move toward your location. No guesswork, no delays!</string>
    <string name="log_out">Log Out</string>
    <string name="app_settings">⚙️ App Settings</string>
    <string name="change_password">Change Password</string>
    <string name="accept_obd_ii_data_from_drivers">Accept OBD-II Data from Drivers</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="profile">👤 Profile</string>
    <string name="name_john_mechanic">Name: John Mechanic</string>
    <string name="phone_">"Phone: "</string>
    <string name="available_for_service">Available for Service</string>
    <string name="a_driver_nearby_needs_battery_service">A driver nearby needs battery service.</string>
    <string name="notification_icon">Notification Icon</string>
    <string name="new_service_request">New Service Request</string>
    <string name="new_alerts_will_appear_here">New alerts will appear here</string>
    <string name="you_re_all_caught_up">You\'re all caught up!</string>
    <string name="no_notifications" />
    <string name="welcome_driver">Welcome, Driver 👋</string>
    <string name="service">Service</string>
    <string name="Profile">Profile</string>
    <string name="Location">Location</string>
    <string name="share_location">Share Location</string>
    <string name="request_service">Request Service</string>
    <string name="no_notifications_message">\n</string>
    <string name="no_notifications_icon">\n</string>
    <string name="reject_requests">Reject Request</string>
    <string name="no_Notifications">no notifications</string>
    <string name="location_loading">Location:loading</string>
    <string name="share_diagnostics">Share Diagnostics</string>
    <string name="billing_kes_0_0">Billing: KES 0.0</string>
    <string name="drivers">Driver</string>
    <string name="share_obd_ii_data">Share OBD-II Data</string>
    <string name="account">Account</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="vehicle">Vehicle</string>
    <string name="general">General</string>
    <string name="stress_less_fix_faster_mechanics_in_motion">Stress less,Fix Faster - Mechanics in Motion!</string>
    <string name="share_obd_data_with_mechanics">Share OBD Data with Mechanics</string>
    <string name="enable_dark_mode">Enable Dark Mode</string>
    <string name="upload_profile_picture">Upload Profile Picture</string>
    <string name="change_passwords">Change Password</string>
    <string name="updates">Update Credentials</string>
    <string name="Login">Login</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="image">image\n</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="full_name">Full Name</string>
    <string name="save__info">Save</string>
    <string name="phone_number">Phone Number</string>
    <string name="id_number">ID Number</string>
    <string name="save_profile">Save Profile</string>
    <string name="distance">"Distance: "</string>
    <string name="view_location">📍 View Location</string>
    <string name="request_services">🛠️ Request Service</string>
    <string name="current_password_">Current Password</string>
    <string name="_password_new">New Password</string>
    <string name="update_password">Update Password</string>
    <string name="submit_button">Submit</string>
    <string name="rate_mechanic">Rate Mechanic</string>
    <string name="write_a_review_optional">Write a review (optional)</string>
    <string name="workshop_kisumu_cbd">Workshop: Kisumu CBD</string>
    <string name="_4_5">⭐ 4.5</string>
    <string name="jane_doe">John Doe</string>
    <string name="brake_specialist">Brake Specialist</string>
    <string name="_services">Request Service</string>
    <string name="mechanic_image">Mechanic Image</string>
    <string name="chat_with_mechanic">Chat with Mechanic</string>
    <string name="motels">Motels</string>
    <string name="find__mechanic">Find a Mechanic</string>
    <string name="petrol_stations">Petrol Stations</string>
    <string name="auto_spares_shops">Auto Spares Shops</string>
    <string name="todo">TODO</string>
    <string name="today">Today</string>
    <string name="this_month">This Month</string>
    <string name="all">All</string>
    <string name="this_week">This Week</string>
    <string name="no_service_history_available">No service history available.</string>
</resources>