<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@color/black">

    <EditText
        android:id="@+id/currentPassword"
        android:layout_width="320dp"
        android:layout_height="49dp"
        android:autofillHints="current Password"
        android:hint="@string/current_password_"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/gray" />

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="320dp"
        android:layout_height="49dp"
        android:autofillHints="new Password"
        android:hint="@string/_password_new"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/gray" />
    <EditText
    android:id="@+id/confirmPassword"
    android:layout_width="320dp"
    android:layout_height="49dp"
    android:autofillHints="new Password"
    android:hint="@string/confirm_new_password"
    android:inputType="textPassword"
    android:minHeight="48dp"
    android:textColor="@color/white"
    android:textColorHint="@color/gray" />
    <Button
        android:id="@+id/updatePasswordBtn"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:text="@string/update_password"
        android:backgroundTint="@color/teal"
        android:textColor="@color/black" />
</LinearLayout>
