<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/realTimeMapFragment"
        android:icon="@drawable/ic_map"
        android:title="Map" />

    <item
        android:id="@+id/mechanicsListFragment"
        android:icon="@drawable/ic_mechanic"
        android:title="Mechanics" />

    <item
        android:id="@+id/NotificationFragment"
        android:icon="@drawable/ic_notifications"
        android:title="Alerts" />

    <item
        android:id="@+id/ServiceHistoryFragment"
        android:icon="@drawable/ic_history"
        android:title="History" />

    <item
        android:id="@+id/SettingsFragment"
        android:icon="@drawable/ic_settings"
        android:title="Settings" />
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

</menu>
