<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:padding="24dp"
    android:gravity="center" android:background="#121212">

    <TextView
        android:text="@string/rate_mechanic"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        android:layout_marginBottom="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <RatingBar
        android:id="@+id/ratingBar"
        android:numStars="5"
        android:stepSize="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/reviewText"
        android:hint="@string/write_a_review_optional"
        android:inputType="text"
        android:textColor="#fff"
        android:textColorHint="#888"
        android:background="@drawable/chat_input_bg"
        android:layout_width="370dp"
        android:layout_height="50dp" />

    <Button
        android:id="@+id/submitButton"
        android:text="@string/submit_button"
        android:layout_marginTop="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>
