<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!-- Toolbar -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_service_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
        app:title="Service History"
        app:titleTextColor="@color/white"
        app:navigationIcon="@drawable/ic_arrow_back" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchHistory"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/light_blue_600"
        android:textAppearance="@color/black"
        android:queryHint="Search by mechanic or car..."
        app:iconifiedByDefault="false"
        />
    <!-- Filter Chips -->
    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroupFilters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        app:singleSelection="true"
        app:singleLine="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipToday"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/today"
            android:checked="false"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chipWeek"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/this_week"
            android:checked="false"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chipMonth"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/this_month"
            android:checked="false"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chipAll"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/all"
            android:textColor="#3F51B5" />
    </com.google.android.material.chip.ChipGroup>

    <!-- ProgressBar -->
    <ProgressBar
        android:id="@+id/progressHistory"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:layout_marginTop="20dp"/>

    <!-- Empty state -->
    <TextView
        android:id="@+id/emptyHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_service_history_available"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:visibility="gone"/>

    <!-- RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerHistory"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="8dp"/>

</LinearLayout>
